adding animation on load page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@ href="./img/favicon.ico" /> -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
       <div class="container-fluid">
-        <a class="navbar-brand me-0" href="/"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
+        <a class="navbar-brand me-0" href="/" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse menu-wrapper" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav active">
               <a class="nav-link link-nav active page-scroll" aria-current="page" href="#home">Home</a>
             </li>
@@ -60,9 +60,9 @@ href="./img/favicon.ico" /> -->
       </div>
     </nav>
   </header>
-  <section class="hero" id="home">
+  <section class="hero" id="home" >
     <div class="container-fluid">
-      <div class="hero-body d-flex flex-column justify-content-center text-center align-items-center text-white">
+      <div class="hero-body d-flex flex-column justify-content-center text-center align-items-center text-white" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
         <h1 class="text-uppercase fw-bold mb-4">
           we're provide <br />
           enterprise digital solution
@@ -92,7 +92,7 @@ href="./img/favicon.ico" /> -->
     <div class="page-item rounded-circle"></div>
   </div>
   <div class="container-fluid">
-    <section class="about py-5 d-flex flex-column" id="about">
+    <section class="about py-5 d-flex flex-column overflow-hidden" id="about">
       <div class="about-body row mb-5">
         <div class="col-md-6 mb-4">
           <div class="about-image">
@@ -102,28 +102,28 @@ href="./img/favicon.ico" /> -->
         <div class="col-md-6">
           <div class="d-flex align-items-center h-100">
             <div class="about-text ps-5">
-              <h1 class="fw-bold text-black">
+              <h1 class="fw-bold text-black" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">
                 What We Have to
                 <span class="txt-secondary">Help</span> Bussines Owner
               </h1>
-              <p class="txt-primary mb-4">
+              <p class="txt-primary mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
                 We mainly focus to help Business owner and support them using
                 Our Digital Solution. And our client can focus with their
                 idea, sales and leads.
               </p>
-              <div class="d-flex align-items-center mb-4">
+              <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="700">
                 <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
                 <span class="fs-5 txt-primary">Trustworthy Partner</span>
               </div>
-              <div class="d-flex align-items-center mb-4">
-                <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
+              <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">
+                <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3" ></i>
                 <span class="fs-5 txt-primary">Quality Service</span>
               </div>
-              <div class="d-flex align-items-center mb-4">
+              <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900">
                 <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
                 <span class="fs-5 txt-primary">Competitive Price</span>
               </div>
-              <div class="about-text-button d-flex justify-content-start">
+              <div class="about-text-button d-flex justify-content-start" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1000">
                 <button class="btn-start-now text-uppercase text-dark bg-transparent fw-bold border-3 border-dark rounded-0">
                   start now
                 </button>
@@ -133,18 +133,18 @@ href="./img/favicon.ico" /> -->
         </div>
       </div>
       <div class="about-text-second d-flex flex-column justify-content-center align-items-center text-center mb-5">
-        <h1 class="fw-bold text-black">
+        <h1 class="fw-bold text-black" data-aos="fade-in" data-aos-duration="3000">
           Our Work Process
           <span class="txt-secondary">Strong</span> Bussines
         </h1>
-        <div class="txt-primary">
+        <div class="txt-primary" data-aos="fade-in" data-aos-duration="3000">
           <p class="m-0">We help our clients with 3 types of services.</p>
           <p class="m-0">Custom Apps, Website Builder & Platform Builder</p>
         </div>
       </div>
       <div class="about-card row">
         <div class="col-md-4 mb-3">
-          <div class="box-card shadow d-flex flex-column text-center align-items-center">
+          <div class="box-card shadow d-flex flex-column text-center align-items-center" data-aos="fade-right" data-aos-duration="2000">
             <img src="./assets/img/Custom Web App.svg" alt="custom-web-app" class="mb-3" />
             <h4 class="fw-bold">Custome Web App</h4>
             <p class="txt-primary">
@@ -157,7 +157,7 @@ href="./img/favicon.ico" /> -->
           </div>
         </div>
         <div class="col-md-4 mb-3">
-          <div class="box-card shadow d-flex flex-column text-center align-items-center">
+          <div class="box-card shadow d-flex flex-column text-center align-items-center" data-aos="fade-in" data-aos-duration="2000">
             <img src="./assets/img/Website Builder.svg" alt="custom-web-app" class="mb-3" />
             <h4 class="fw-bold">Website Builder</h4>
             <p class="txt-primary">
@@ -170,7 +170,7 @@ href="./img/favicon.ico" /> -->
           </div>
         </div>
         <div class="col-md-4 mb-3">
-          <div class="box-card shadow d-flex flex-column text-center align-items-center">
+          <div class="box-card shadow d-flex flex-column text-center align-items-center" data-aos="fade-left" data-aos-duration="2000"> 
             <img src="./assets/img/Platform.svg" alt="custom-web-app" class="mb-3" />
             <h4 class="fw-bold">Platform Builder</h4>
             <p class="txt-primary">
@@ -185,17 +185,17 @@ href="./img/favicon.ico" /> -->
       </div>
     </section>
   </div>
-  <section class="subscribe" id="subsribe">
+  <section class="subscribe overflow-hidden" id="subsribe">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 mb-3">
+        <div class="col-md-6 mb-3" data-aos="fade-right" data-aos-duration="1500">
           <h2 class="fw-bold text-black">Subscribe Our Newsletter</h2>
           <p class="txt-primary mb-0">
             Subscribe to get our promotional news
           </p>
         </div>
         <div class="col-md-6">
-          <div class="input-group mb-3">
+          <div class="input-group mb-3" data-aos="fade-left" data-aos-duration="1500">
             <input type="text" class="form-control input-subscribe" placeholder="Enter your email here*" aria-label="Recipient's username" aria-describedby="basic-addon2" />
             <span class="input-group-text button-subscribe" id="basic-addon2">Join</span>
           </div>
@@ -203,14 +203,14 @@ href="./img/favicon.ico" /> -->
       </div>
     </div>
   </section>
-  <section class="history py-5" id="history">
+  <section class="history py-5 overflow-hidden" id="history">
     <div class="container">
       <div class="history-title d-flex flex-column justify-content-center align-items-center text-center mb-5">
-        <h1 class="fw-bold text-black">
+        <h1 class="fw-bold text-black" data-aos="fade-in" data-aos-duration="3000">
           Start Business Some of
           <span class="txt-secondary">Our History</span>
         </h1>
-        <p class="txt-primary">
+        <p class="txt-primary" data-aos="fade-in" data-aos-duration="3000">
           We've helped many clients around the world’s and we also create our
           own histories from our great clients. And we do our business process
           remotely from our loved office to support our loved clients.
@@ -219,26 +219,26 @@ href="./img/favicon.ico" /> -->
       <div class="row gy-4">
         <div class="col-md-6">
           <div class="row g-4">
-            <div class="col-md-6 col-6">
-              <div class="history-card shadow text-center">
+            <div class="col-md-6 col-6" >
+              <div class="history-card shadow text-center" data-aos="fade-right" data-aos-duration="2000">
                 <h1 class="fw-bold text-black">235</h1>
                 <p class="txt-primary m-0">Project Complete</p>
               </div>
             </div>
-            <div class="col-md-6 col-6">
-              <div class="history-card shadow text-center">
+            <div class="col-md-6 col-6" >
+              <div class="history-card shadow text-center" data-aos="fade-right" data-aos-duration="2000">
                 <h1 class="fw-bold text-black">132</h1>
                 <p class="txt-primary m-0">Manage Projects</p>
               </div>
             </div>
             <div class="col-md-6 col-6">
-              <div class="history-card shadow text-center">
+              <div class="history-card shadow text-center" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
                 <h1 class="fw-bold text-black">164</h1>
                 <p class="txt-primary m-0">New Client</p>
               </div>
             </div>
             <div class="col-md-6 col-6">
-              <div class="history-card shadow text-center">
+              <div class="history-card shadow text-center" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
                 <h1 class="fw-bold text-black">132</h1>
                 <p class="txt-primary m-0">Happy Clients</p>
               </div>
@@ -246,7 +246,7 @@ href="./img/favicon.ico" /> -->
           </div>
         </div>
         <div class="col-md-6">
-          <video src="./assets/img/Gedung Pencakar Langit - 91744.mp4" controls class="w-100 video-history"></video>
+          <video src="./assets/img/Gedung Pencakar Langit - 91744.mp4" controls class="w-100 video-history" data-aos="fade-left" data-aos-duration="2000"></video>
         </div>
       </div>
     </div>
@@ -254,12 +254,12 @@ href="./img/favicon.ico" /> -->
   <div class="container-fluid">
     <section class="projects" id="projects">
       <div class="projects-title d-flex flex-column justify-content-center align-items-center text-center mb-5">
-        <h1 class="fw-bold text-black">
+        <h1 class="fw-bold text-black" data-aos="fade-in" data-aos-duration="3000">
           You Can See <br />
           Our New
           <span class="txt-secondary">Projects</span>
         </h1>
-        <p class="txt-primary fs-5">
+        <p class="txt-primary fs-5" data-aos="fade-in" data-aos-duration="3000">
           Here is our histories. We've build and help many projects from our
           clients
         </p>
@@ -369,16 +369,16 @@ href="./img/favicon.ico" /> -->
       </div>
     </section>
   </div>
-  <section class="our-clients py-5" id="our-clients">
+  <section class="our-clients py-5 overflow-hidden" id="our-clients">
     <div class="container">
       <div class="our-clients-title d-flex flex-column justify-content-center align-items-center text-center mb-5">
-        <h1 class="fw-bold text-black">
+        <h1 class="fw-bold text-black" data-aos="fade-in" data-aos-duration="3000">
           What Say Our Profesional
           <span class="txt-secondary">Clients</span>
         </h1>
       </div>
 
-      <div class="our-clients-body shadow p-5 rounded-pill d-flex justify-content-center align-items-center">
+      <div class="our-clients-body shadow p-5 rounded-pill d-flex justify-content-center align-items-center" data-aos="fade-left" data-aos-duration="2000">
         <img src="./assets/img/clients-1.webp" alt="clients-1" class="img-fluid rounded-circle me-5" />
         <div class="desc pt-3">
           <p class="mb-3 fst-italic">
@@ -407,7 +407,7 @@ href="./img/favicon.ico" /> -->
   </section>
   <section class="team py-4" id="team">
     <div class="d-flex flex-column justify-content-center align-items-center text-center">
-      <h1 class="fw-bold text-black mb-3">
+      <h1 class="fw-bold text-black mb-3" data-aos="fade-in" data-aos-duration="3000">
         Meet The
         <span class="txt-secondary">Team</span>
       </h1>
@@ -425,21 +425,21 @@ href="./img/favicon.ico" /> -->
   <section class="contact py-5" id="contact">
     <div class="contact-body d-flex">
       <div class="contact-card-wrapper w-50">
-        <div class="card-contact d-flex background-secondary">
+        <div class="card-contact d-flex background-secondary" data-aos="fade-right" data-aos-duration="2000">
           <i class="fas fa-phone"></i>
           <div class="d-inline w-100">
             <h5 class="fw-bold mb-0">Phone</h5>
             <p class="m-0">+62 811-2108-020</p>
           </div>
         </div>
-        <div class="card-contact d-flex background-secondary">
+        <div class="card-contact d-flex background-secondary" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
           <i class="far fa-envelope"></i>
           <div class="d-inline w-100">
             <h5 class="fw-bold mb-0">Email</h5>
             <p class="m-0">admin@nineod.com</p>
           </div>
         </div>
-        <div class="card-contact d-flex background-secondary">
+        <div class="card-contact d-flex background-secondary" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
           <i class="fa fa-map-marker-alt"></i>
           <div class="d-inline w-100">
             <h5 class="fw-bold mb-0">Address</h5>
@@ -449,15 +449,15 @@ href="./img/favicon.ico" /> -->
       </div>
       <div class="contact-title-wrapper w-50">
         <div class="contact-title">
-          <h1 class="fw-bold text-black mb-0">
+          <h1 class="fw-bold text-black mb-0" data-aos="fade-in" data-aos-duration="3000">
             <span class="txt-secondary">Interested</span>
             in discussing?
           </h1>
-          <p class="txt-primary">
+          <p class="txt-primary" data-aos="fade-in" data-aos-duration="3000">
             We're open for any sugeestion or just to have a chat
           </p>
         </div>
-        <form action="#" class="form row">
+        <form action="#" class="form row" data-aos="fade-in" data-aos-duration="3000" data-aos-delay="500">
           <div class="col-md-12">
             <div class="input-group-contact d-flex justify-content-between">
               <input type="text" class="input-control-contact" placeholder="Name" />
