--- a/platform-builder.html
+++ b/platform-builder.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/aos/aos.css">
   <!-- <link rel="icon" type="image/x-icon" href="./img/favicon.ico" /> -->
   <title>Platform Builder | Nineod</title>
 </head>
@@ -16,12 +17,12 @@
   <header class="position-relative">
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
       <div class="container-fluid">
-        <a class="navbar-brand me-0" href="#"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
+        <a class="navbar-brand me-0" href="#" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav">
               <a class="nav-link link-nav" aria-current="page" href="/#home">Home</a>
             </li>
@@ -62,15 +63,15 @@
     <div class="background-dark-thin">
       <div class="container-fluid">
         <div class="platform-home-body d-flex flex-column justify-content-center text-center align-items-center text-white">
-          <h1 class="text-capitalize mb-3 fw-light">
+          <h1 class="text-capitalize mb-3 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             kembangkan bisnis anda secara online
           </h1>
-          <p class="mb-4 fs-5 fw-light">
+          <p class="mb-4 fs-5 fw-light" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
             Kembangkan Bisnis Online Anda dengan menggunakan layanan Platform
             Builder kami
           </p>
 
-          <button class="btn-buat-sekarang bg-transparent text-light py-2 px-3">
+          <button class="btn-buat-sekarang bg-transparent text-light py-2 px-3" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000">
             Buat Sekarang
           </button>
         </div>
@@ -84,7 +85,7 @@
     <div class="container-fluid d-flex">
       <div class="row gy-4">
         <div class="col-md-6">
-          <div class="section-one-title d-flex flex-column">
+          <div class="section-one-title d-flex flex-column" data-aos="fade-right" data-aos-duration="2000">
             <h2 class="fw-bold text-black">
               Kembangkan dan Kelola Restoran Anda
             </h2>
@@ -92,36 +93,36 @@
               Mulai Bangun bisnis Restoran anda, dapatkan kemudahan dalam
               reservasi produk makanan anda.
             </p>
-            <div class="row">
-              <div class="col-md-6">
-                <h5 class="fw-bold mb-3">Pemesanan Online</h5>
-                <p>
-                  Terima pesanan & terima pembayaran online anda . Biarkan
-                  pelanggan anda memesan dan melakukan pengambilan produk anda
-                  dengan mudah cepat.
-                </p>
-              </div>
-              <div class="col-md-6">
-                <h5 class="fw-bold mb-3">Manajemen Reservasi</h5>
-                <p>
-                  Dapatkan Kemudahan dalam reservasi online & Kirim konfirmasi
-                  otomatis kepada pelanggan
-                </p>
-              </div>
-              <div class="col-md-6">
-                <h5 class="fw-bold mb-3">Custom Menu</h5>
-                <p>
-                  Buat dan kelola menu online untuk restoran anda dan jangkau
-                  lebih banyak pembeli.
-                </p>
-              </div>
-              <div class="col-md-6">
-                <h5 class="fw-bold mb-3">Pembayaran Online yang Aman</h5>
-                <p>
-                  Biarkan pelanggan membayar dengan kartu kredit, dompet
-                  digital, atau uang tunai
-                </p>
-              </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
+              <h5 class="fw-bold mb-3">Pemesanan Online</h5>
+              <p>
+                Terima pesanan & terima pembayaran online anda . Biarkan
+                pelanggan anda memesan dan melakukan pengambilan produk anda
+                dengan mudah cepat.
+              </p>
+            </div>
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="400">
+              <h5 class="fw-bold mb-3">Manajemen Reservasi</h5>
+              <p>
+                Dapatkan Kemudahan dalam reservasi online & Kirim konfirmasi
+                otomatis kepada pelanggan
+              </p>
+            </div>
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
+              <h5 class="fw-bold mb-3">Custom Menu</h5>
+              <p>
+                Buat dan kelola menu online untuk restoran anda dan jangkau
+                lebih banyak pembeli.
+              </p>
+            </div>
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
+              <h5 class="fw-bold mb-3">Pembayaran Online yang Aman</h5>
+              <p>
+                Biarkan pelanggan membayar dengan kartu kredit, dompet
+                digital, atau uang tunai
+              </p>
             </div>
           </div>
         </div>
@@ -131,22 +132,22 @@
       </div>
     </div>
   </section>
-  <section class="section-two py-5">
+  <section class="section-two py-5 overflow-hidden">
     <div class="container-fluid">
       <div class="row gy-4">
         <div class="col-md-6">
-          <img src="./assets/img/b71c4b_36efeb33a7de4687b9b64ac76e03d939.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 section-two-img" />
+          <img src="./assets/img/b71c4b_36efeb33a7de4687b9b64ac76e03d939.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 section-two-img" data-aos="fade-right" data-aos-duration="2000" />
         </div>
         <div class="col-md-6">
-          <div class="section-two-title h-100 d-flex flex-column justify-content-center">
-            <h2 class="fw-bold text-black">Kelola Reservasi Hotel</h2>
+          <div class="section-two-title h-100 d-flex flex-column justify-content-center" data-aos="fade-left" data-aos-duration="2000">
+            <h2 class="fw-bold text-black" >Kelola Reservasi Hotel</h2>
             <p class="mb-4">
               Ayo Bangun Bisnis Hotel impian Anda, Dapatkan kemudahan dalam
               reservasi hotel anda. Nikmati berbagai macam fitur untuk
               menjangkau luas pelanggan anda.
             </p>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
                 <h5 class="fw-bold mb-3">Sewa & Daftar Hotel Online</h5>
                 <p>
                   Avenir Light is a clean and stylish font favored by
@@ -154,7 +155,7 @@
                   titles, paragraphs & more.
                 </p>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="400">
                 <h5 class="fw-bold mb-3">Kelola Reservasi</h5>
                 <p>
                   Avenir Light is a clean and stylish font favored by
@@ -162,7 +163,7 @@
                   titles, paragraphs & more.
                 </p>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="500">
                 <h5 class="fw-bold mb-3">Kirim Email Informasi Instan</h5>
                 <p>
                   Tamu Anda akan secara otomatis mendapatkan email konfirmasi
@@ -175,11 +176,11 @@
       </div>
     </div>
   </section>
-  <section class="section-one">
+  <section class="section-one overflow-hidden">
     <div class="container-fluid d-flex">
       <div class="row gy-4">
         <div class="col-md-6">
-          <div class="section-one-title d-flex flex-column">
+          <div class="section-one-title d-flex flex-column"  data-aos="fade-right" data-aos-duration="2000" >
             <h2 class="fw-bold text-black">
               Buat Situs Toko Online dengan Mudah
             </h2>
@@ -188,21 +189,21 @@
               fitur-fitur menarik yang kami sediakan.
             </p>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="300">
                 <h5 class="fw-bold mb-3">Pembayaran Online yang Aman</h5>
                 <p>
                   Terima pembayaran online yang aman & kelola semua transaksi
                   dari dasbor Wix Anda.
                 </p>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="400">
                 <h5 class="fw-bold mb-3">Paket & Pembayaran Berulang</h5>
                 <p>
                   Tawarkan berbagai paket harga, mulai jual langganan &
                   kumpulkan pembayaran berulang.
                 </p>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="500">
                 <h5 class="fw-bold mb-3">Produk Tak Terbatas</h5>
                 <p>
                   Tampilkan produk & koleksi Anda tanpa batas dan berikan opsi
@@ -210,7 +211,7 @@
                   mudah.
                 </p>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="600">
                 <h5 class="fw-bold mb-3">Jual di Marketplaces</h5>
                 <p>
                   Jangkau lebih banyak pembeli & jual di marketplace manapun.
@@ -220,16 +221,18 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="./assets/img/S1.jpg" alt="burger_edited" class="section-one-img img-fluid" />
+          <img src="./assets/img/S1.jpg" alt="burger_edited" class="section-one-img img-fluid" data-aos="fade-left" data-aos-duration="2000"/>
         </div>
       </div>
     </div>
   </section>
   <section class="make-schedule d-flex flex-column justify-content-center text-center">
     <div class="container-fluid">
-      <h3 class="fw-bold mb-3">Kami Disini Untuk Anda</h3>
-      <p class="m-0">Punya Pertanyaan Seputar Website?</p>
-      <p class="mb-4">Buat Jadwal Diskusi Sekarang!</p>
+      <h3 class="fw-bold mb-3" data-aos="fade-up" data-aos-duration="2000">Kami Disini Untuk Anda</h3>
+      <div data-aos="fade-right" data-aos-duration="2000">
+        <p class="m-0">Punya Pertanyaan Seputar Website?</p>
+        <p class="mb-4">Buat Jadwal Diskusi Sekarang!</p>
+      </div>
       <button class="btn-make-schedule">Buat Jadwal</button>
     </div>
   </section>
@@ -504,7 +507,7 @@
   <script src="./assets/js/jquery.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
-  <script></script>
+  <script src="./assets/js/aos/customAos.js"></script>
 </body>
 
 </html>
