--- a/website-builder.html
+++ b/website-builder.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/aos/aos.css">k
   <!-- <link rel="icon" type="image/x-icon" href="./img/favicon.ico" /> -->
   <title>Website Builder | Nineod</title>
 </head>
@@ -16,12 +17,12 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
       <div class="container-fluid">
-        <a class="navbar-brand me-0" href="#"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
+        <a class="navbar-brand me-0" href="#" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav ">
               <a class="nav-link link-nav " aria-current="page" href="/#home">Home</a>
             </li>
@@ -62,10 +63,10 @@
     <div class="background-dark">
       <div class="container-fluid">
         <div class="website-home-body d-flex flex-column justify-content-center text-center align-items-center text-white">
-          <h1 class="text-capitalize mb-3 fw-light">
+          <h1 class="text-capitalize mb-3 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             Buat Website personal Anda
           </h1>
-          <div class="fs-5 description">
+          <div class="fs-5 description" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
             <p class="mb-0 fw-light">
               Buat website portofolio Anda agar terlihat lebih professional.
             </p>
@@ -73,7 +74,7 @@
               Dan tingkatkan personal branding dan juga online presence Anda.
             </p>
           </div>
-          <button class="btn-buat-sekarang bg-transparent text-light py-2 px-3">
+          <button class="btn-buat-sekarang bg-transparent text-light py-2 px-3" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000">
             Buat Sekarang
           </button>
         </div>
@@ -85,30 +86,30 @@
   </a>
   <section class="profesional-blog d-flex">
     <div class="profesional-blog-title justify-content-center d-flex flex-column">
-      <h1>Professional Blog</h1>
-      <p>
+      <h1 data-aos="fade-right" data-aos-duration="2000">Professional Blog</h1>
+      <p data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
         Buat blog dengan fitur menarik untuk mengembangkan jangkauan Anda dan
         membangun komunitas.
       </p>
     </div>
     <div class="profesional-blog-img d-flex align-items-center justify-content-center">
-      <img src="./assets/img/profesional-blog-img.png" alt="profesional-blog-img" />
+      <img src="./assets/img/profesional-blog-img.png" alt="profesional-blog-img"  />
     </div>
   </section>
-  <section class="profesional-logo py-5">
+  <section class="profesional-logo py-5 overflow-hidden">
     <div class="container-fluid">
       <div class="row gy-4">
         <div class="col-md-6">
-          <img src="./assets/img/profesional-logo-img.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 profesional-logo-img" />
+          <img src="./assets/img/profesional-logo-img.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 profesional-logo-img" data-aos="fade-right" data-aos-duration="2000"/>
         </div>
         <div class="col-md-6">
           <div class="profesional-logo-title h-100 d-flex flex-column justify-content-center">
-            <h1>Professional Logo</h1>
-            <p>
+            <h1 data-aos="fade-left" data-aos-duration="2000">Professional Logo</h1>
+            <p data-aos="fade-left" data-aos-duration="2000" data-aos-delay="500">
               Rancang logo profesional untuk merek atau bisnis Anda, hak
               komersial penuh & semua format file yang Anda butuhkan.
             </p>
-            <p>
+            <p data-aos="fade-left" data-aos-duration="2000" data-aos-delay="600">
               Sekecil apa pun logo Anda, itu memiliki peran yang cukup besar
               untuk dimainkan. Itu akan terlihat di mana-mana, baik online
               maupun offline. Selain itu, ini akan berfungsi sebagai tanda
@@ -120,28 +121,30 @@
       </div>
     </div>
   </section>
-  <section class="show-creation py-4">
+  <section class="show-creation py-4 overflow-hidden">
     <div class="container-fluid">
       <div class="show-creation-content d-flex">
         <div class="show-creation-title w-50 d-flex flex-column justify-content-center">
-          <h1>Pamerkan Karya Anda Sekarang Juga</h1>
-          <p>
+          <h1 data-aos="fade-right" data-aos-duration="2000">Pamerkan Karya Anda Sekarang Juga</h1>
+          <p data-aos="fade-right" data-aos-duration="2000" data-aos-delay="200">
             Anda bisa memamerkan karya yang anda miliki dan bangun kepercayaan
             pelanggan anda dengan tampilan website yang sesuai dengan
             keinginan anda.
           </p>
         </div>
         <div class="show-creation-img w-50 mb-4 d-flex justify-content-end">
-          <img src="./assets/img/show-creation-img.webp" alt="show-creation" class="img-fluid w-75" />
+          <img src="./assets/img/show-creation-img.webp" alt="show-creation" class="img-fluid w-75" data-aos="fade-left" data-aos-duration="2000" />
         </div>
       </div>
     </div>
   </section>
   <section class="make-schedule d-flex flex-column justify-content-center text-center">
     <div class="container-fluid">
-      <h3 class="fw-bold mb-3">Kami Disini Untuk Anda</h3>
-      <p class="m-0">Punya Pertanyaan Seputar Website?</p>
-      <p class="mb-4">Buat Jadwal Diskusi Sekarang!</p>
+      <h3 class="fw-bold mb-3" data-aos="fade-up" data-aos-duration="2000">Kami Disini Untuk Anda</h3>
+      <div data-aos="fade-right" data-aos-duration="2000">
+        <p class="m-0">Punya Pertanyaan Seputar Website?</p>
+        <p class="mb-4">Buat Jadwal Diskusi Sekarang!</p>
+      </div>
       <button class="btn-make-schedule">Buat Jadwal</button>
     </div>
   </section>
@@ -190,7 +193,7 @@
                   Melakukan konfirmasi pembayaran melalui admin Whatsapp.
                 </li>
               </ul>
-              <span clogin-page <li>Untuk saat ini belum tersedia.</li>
+              <li>Untuk saat ini belum tersedia.</li>
                 </ul>
                 <span class="fw-semibold">PEMBAYARANNYA MELALUI APA?</span>
                 <ul>
@@ -415,6 +418,7 @@
   <script src="./assets/js/jquery.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="./assets/js/aos/customAos.js"></script>
 </body>
 
 </html>
